# whatsapp-bot-scanner

./: .deepsource.toml  .env.example  .env.hobby  .env.local  .env.mvp.example  .eslintrc.cjs  .gitignore  .snyk  .tsbuildinfo  AGENTS.md  ASSESSMENT.md  AUDIT_REPORT.md  BOT_ROBUSTNESS_REPORT.md  CLOUD_DEPLOYMENT_OPTIONS.md  COMPREHENSIVE_PENETRATION_TEST_REPORT.md  CRITICAL_ISSUES.md  CRITICAL_MAJOR_TICKETS.md  DOCKER_BUILD_FIX.md  DOCKER_INSTALLATION_REPORT.md  ENVIRONMENT_STATUS.md  FINAL_STATUS_REPORT.md  FIX_DOCKER_NETWORKING.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_SOTA_RESEARCH_REPORT.md  MUTATION_TESTING_REPORT.md  MVP_VIABILITY_ANALYSIS.md  Makefile  PERFORMANCE_REPORT.md  PERFORMANCE_TESTING_REPORT.md  PROGRESS.md  PROPERTY_TESTING_REPORT.md  PULL_REQUEST.md  README-BAILEYS-SCRAPER.md  README.md  REBUILD_CODESPACE.md  RECOMMENDATIONS.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  (+47 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: SYNC_QUICKSTART.md
.jules/: bolt.md  sentinel.md
.vercel/: project.json
SafeMode-web-app/: .env.example  (+9 more)
scripts/agent_orchestrator/: __init__.py  agents.py  cli_agents.py  config.py  config.yaml  main.py  mcp_server.py  pyproject.toml  utils.py
scripts/agent_orchestrator/.gemini/: settings.json
scripts/agent_orchestrator/prompts/: executor.txt  planner.txt  reviewer.txt
scripts/agent_orchestrator/tests/: __init__.py  test_mcp_server.py  test_orchestrator.py
scripts/agent_orchestrator/wbscanner_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+1293 files in other folders)
